(#3675) App Modules Spacing Fix

--- a/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/app-module/app-module-legacy.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/app-module/app-module-legacy.scss
@@ -61,13 +61,16 @@
 			width: 30px;
 		}
 	}
+}
 
-
+#NCI-glossary-app-root {
+	margin-bottom: 39px;
 }
 
 // reduces padding between the "locations" label and descriptive text
 // in the trial listing app root
 #NCI-trial-listing-app-root {
+	margin-bottom: 24px;
 	.ct-list-item__body {
 		margin: 0.25em 0;
 	}
@@ -95,6 +98,7 @@
 
 // fixed spacing issue with toggle button in CTS Advanced search field
 #NCI-CTS-root {
+	margin-bottom: 24px;
 	.cts-toggle {
 		padding-right: 3px;
 	}
@@ -106,6 +110,7 @@
 
 #NCI-dd-app-root {
 	//Override _mainContent.scss for only this use case
+	margin-bottom: 39px;
 	.search-results-alias-list {
 		li {
 			margin: 0 16px 0 0;
