--- a/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/r4r/r4r-app-legacy.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/ncids_trans/front-end/src/entrypoints/r4r/r4r-app-legacy.scss
@@ -1,5 +1,6 @@
 // adds spacing between footer and r4r page and focus outline on input field
 #NCI-R4R-root {
+    margin-bottom: 24px;
     .searchbar__container input:focus {
         outline: 0.25rem solid #2491ff;
     }
